--- a/Вопросы ОТП.md
+++ b/Вопросы ОТП.md
@@ -249,7 +249,7 @@ var service = container.Resolve<IMyService>();
 
 ### 12. **Entity Framework. Какие есть подходы к работе с БД?**
 
-В Entity Framework существует два основных подхода к работе с базой данных:
+В Entity Framework существует три основных подхода к работе с базой данных:
 
 1. **Code First (Код вперед):**  
    В этом подходе сначала создаются классы-модели в коде, а затем Entity Framework автоматически генерирует базу данных на основе этих моделей. Этот подход удобен для разработчиков, которые предпочитают работать с кодом.
